--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -848,3 +848,68 @@ section.lazy-placeholder:after {
 .cid-rV3nVIWXwj H1 {
   color: #cccccc;
 }
+.cid-rWIZlykXLa {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-image: url("../../../assets/images/girls-527x264.png");
+}
+.cid-rWIZlykXLa .socicon-bg-facebook {
+  background: #3e5b98;
+  color: #ffffff;
+}
+.cid-rWIZlykXLa .socicon-bg-twitter {
+  background: #4da7de;
+  color: #ffffff;
+}
+.cid-rWIZlykXLa .socicon-bg-googleplus {
+  background: #dd4b39;
+  color: #ffffff;
+}
+.cid-rWIZlykXLa .socicon-bg-vkontakte {
+  background: #5a7fa6;
+  color: #ffffff;
+}
+.cid-rWIZlykXLa .socicon-bg-odnoklassniki {
+  background: #f48420;
+  color: #ffffff;
+}
+.cid-rWIZlykXLa .socicon-bg-pinterest {
+  background: #c92619;
+  color: #ffffff;
+}
+.cid-rWIZlykXLa .socicon-bg-mail {
+  background: #134785;
+  color: #ffffff;
+}
+.cid-rWIZlykXLa .btn-social {
+  font-size: 20px;
+  border-radius: 50%;
+  padding: 0;
+  width: 44px;
+  height: 44px;
+  line-height: 44px;
+  text-align: center;
+  position: relative;
+  cursor: pointer;
+  border: none !important;
+}
+.cid-rWIZlykXLa .btn-social i {
+  top: 0;
+  line-height: 44px;
+  width: 44px;
+}
+.cid-rWIZlykXLa .btn-social + .btn {
+  margin-left: .1rem;
+}
+.cid-rWIZlykXLa [class^="socicon-"]:before,
+.cid-rWIZlykXLa [class*=" socicon-"]:before {
+  line-height: 44px;
+}
+@media (max-width: 767px) {
+  .cid-rWIZlykXLa .btn {
+    font-size: 20px !important;
+  }
+}
+.cid-rWIZlykXLa .mbr-section-title {
+  color: #66cc33;
+}
